--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,2 +1,32 @@
-<h1>Projects#new</h1>
-<p>Find me in app/views/projects/new.html.erb</p>
+<h1>New Project </h1>
+
+<%= form_for @project do |f| %>
+  <div class="field">
+    <%= f.label :title %>
+    <%= f.text_field :title %>
+  </div>
+
+  <div class="field">
+    <%= f.label :description %>
+    <%=f.text_area :description %>
+  </div>
+
+  <div class="field">
+    <%=f.label :funding_goal %>
+    <%=f.number_field :funding_goal %>
+  </div>
+
+  <div class="field">
+    <%= f.label :start_date %>
+    <%= f.date_field :start_date %>
+  </div>
+
+  <div class="field">
+    <%= f.label :end_date %>
+    <%= f.date_field :end_date %>
+  </div>
+
+  <div class="field">
+    <%= f.submit %>
+  </div>
+<% end %>
