--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -26,28 +26,13 @@
     <%= f.date_field :end_date %>
   </div>
 
-  <h2>Rewards</h2>
+    <%= f.fields_for :reward, Reward.new do |rewards_fields| %>
 
-  <%= f.fields_for :reward, Reward.new do |rewards_fields| %>
-  <div class="field">
-    <%= rewards_fields.label :title %>
-    <%= rewards_fields.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= rewards_fields.label :description %>
-    <%= rewards_fields.text_area :description %>
-  </div>
-
-  <div class="field">
-   <%= rewards_fields.label :amount %>
-   <%= rewards_fields.number_field :amount %>
-  </div>
-
-  <% end %>
+     <%= render :partial => 'rewards_fields', locals: { rewards_fields: rewards_fields } %>
+    <% end %>
 
   <div class="field">
     <%= f.submit %>
   </div>
-  
+
 <% end %>
