--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,19 @@
   <% if flash[:notice] %>
     <p id="notice"><%=flash[:notice] %></p>
   <% end %>
+  <% if flash[:alert] %>
+    <p id="alert"><%=flash[:alert] %></p>
+  <% end %>
 
+  <div class="userinfo">
+    <% if current_user %>
+    Signed in as <%= current_user.email %>. <%= link_to 'Log out',
+      new_session_path('current'), :method => :delete %>
+    <% else %>
+      <%= link_to 'Log in', new_session_path %> or <%= link_to 'Sign up',
+        new_user_path %>
+    <% end %>
+  </div>
 <%= yield %>
 
 </body>
