--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -26,10 +26,18 @@
     <%= f.date_field :end_date %>
   </div>
 
-    <%= f.fields_for :reward, Reward.new do |rewards_fields| %>
 
-     <%= render :partial => 'rewards_fields', locals: { rewards_fields: rewards_fields } %>
-    <% end %>
+  <h2>Rewards</h2>
+    <div id="rewards">
+      <%= f.fields_for :rewards do |reward_fields| %>
+        <%= render "reward_fields", f: reward_fields %>
+      <% end %>
+
+      <div class="links">
+        <%= link_to_add_association "Add Reward", f, :rewards %>
+      </div>
+    </div>
+
 
   <div class="field">
     <%= f.submit %>
