Update nested form

--- a/app/views/projects/_reward_fields.html.erb
+++ b/app/views/projects/_reward_fields.html.erb
@@ -1,4 +1,5 @@
 <div class="nested-fields">
+  <h3>New Reward</h3>
   <div class="field">
     <%= f.label :title %>
     <%= f.text_field :title %>
