Add user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,4 @@
 <h1>Welcome to Your Profile Page</h1>
+
+<p><strong>Email:</strong><%= @user.email %></p>
+<%= link_to 'Edit Account', edit_user_path(@user) %>
