--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,33 +1,3 @@
 <h1>Create An Account</h1>
 
-<%= form_for @user do |f| %>
-  <% if @user.errors.any? %>
-    <div calss="error_messages">
-      <h2>Form Is Invalid</h2>
-      <ul>
-        <% @user.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.email_field :email %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
-  </div>
-
-  <div class="action">
-    <%= f.submit %>
-  </div>
- <% end %>
+<%= render 'user_form' %>
