Generate new migrations

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,6 @@
 <h1>Welcome to Your Profile Page</h1>
+
+<p> The time left on your project is
+<!-- loop throgh back projects and call time left -->
+
+ </p>
