--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -5,6 +5,7 @@
 <div id="new_goal">
 <%= render "funding_goal" %>
 </div>
+<p><%= <@project class="user_id"></@project>%></p>
 <p><%= @project.start_date %></p>
 <p><%= @project.end_date %></p>
 
