--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,16 @@
 <h1>Welcome to Your Profile Page</h1>
 
-<!-- loop throgh owned projects and call time left -->
-
   <% @user.owned_projects.each do |project| %>
   <p>
   <%= "Name of project is #{project.title} time remaining is
   #{distance_of_time_in_words(project.end_date,project.start_or_now)}"%>
 </p>
   <% end %>
+
+<p><strong>Email:</strong><%= @user.email %></p>
+<%= link_to 'Edit Account', edit_user_path(@user) %>
+
+<h1>Projects you own</h1>
+<p><% @owned_projects.each do |project| %>
+  <%= "You owned #{project.title}" %>
+<% end %> </p>
