Can now view project owners

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,7 @@
 <%= link_to "Back to all projects", projects_url %>
 
 <h2><%= @project.title %></h2>
+<p> <%=  @user_project.email %></p>
 <p><%= @project.description %> </p>
 <div id="new_goal">
 <%= render "funding_goal" %>
