--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -13,6 +13,9 @@
   <p><%= reward.description %></p>
   <p id="reward_amount"> <%= reward.amount %></p>
 
-  <%= link_to "Donate!", donate_path(@project.id, reward.id), method: "post" , class: "donate"%>
+  <%= form_for([reward, Pledge.new], :remote => true) do |f|%>
+    <%= f.hidden_field :amount, value: reward.amount %>
+    <%= f.submit "Donate!", class:"donate" %>
+  <% end %>
 
 <% end %>
