--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -3,6 +3,18 @@
 <h1>New Project </h1>
 
 <%= form_for @project do |f| %>
+
+  <% if @project.errors.any? %>
+    <div class="error_messages">
+      <h2>Form Is Invalid</h2>
+      <ul>
+        <% @project.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <div class="field">
     <%= f.label :title %>
     <%= f.text_field :title %>
