Commiting changes before merging from master

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,27 +1,18 @@
 <h1>Welcome to Your Profile Page</h1>
 
-
-<p><strong>Email:</strong><%= @user.email %></p>
-<%= link_to 'Edit Account', edit_user_path(@user) %>
-
-<% if can? :create, Project %>
-    <h1>Your Projects</h1>
-
-    <%= @user.email %>
-
+<h2>Your projects</h2>
 
   <% @user.owned_projects.each do |project| %>
-    <p>
-      <%= "Name of project is #{project.title} time remaining is
-      #{distance_of_time_in_words(project.end_date,project.start_or_now)}"%>
-    </p>
-  <h1>Projects You've donated to</h1>
+  <ul>
+    <li><%= "Name of project is #{project.title}" %>
+    <li><%= "time remaining on this project is
+    #{distance_of_time_in_words(project.end_date,project.start_or_now)}"%></li>
+    <li><%= "Your project has raised ${}" %></li>
+</ul>
   <% end %>
 
-<% elsif can? :read, Project %>
 
-   <h1>Projects You've donated to</h1>
 
-<% else %>
-  <p>you should not see this</p>
-<% end %>
+<h2>Your Profile</h2>
+<p><strong>Email:</strong><%= @user.email %></p>
+<%= link_to 'Edit Account', edit_user_path(@user) %>
