--- a/app/assets/stylesheets/base/globals.scss
+++ b/app/assets/stylesheets/base/globals.scss
@@ -6,7 +6,248 @@ html{
 	box-sizing: inherit;
 }
 .page-wrapper{
-	width: 1024px;
+	width: 100%;
 	margin: 0 auto;
 }
-// h1 { font-family: 'Metrophobic', Arial, serif; font-weight: 400; }
+.crowd{
+  font-family: 'Dosis', sans-serif;
+  font-size: 1.7rem;
+  display: inline-block;
+  padding-left: 2%;
+}
+.funder{
+  font-family: 'Dosis', sans-serif;
+  font-size: 1.7rem;
+  color: #2bde73;
+  display: inline-block;
+}
+
+#header{
+  top:0;
+	left:0;
+	right:0;
+  position: fixed;
+  background-color: white;
+}
+
+#main-menu ul{
+	list-style: none;
+	font-size: 1rem;
+  float: right;
+  margin-top: -5.5%;
+  margin-right: 50%;
+}
+
+#main-menu li{
+	display: inline-block;
+	padding-right: 2.5rem;
+	padding-top: 1.2rem;
+}
+
+#main-menu a, #main-menu a:visited{
+  text-decoration: none;
+  font-family: 'Open Sans';
+  font-size: 1rem;
+  color: #abaeae;
+
+}
+
+#main-menu a:hover{
+  color: #2bde73;
+}
+
+#log-in{
+  clear:right;
+  float: right;
+  display: inline-block;
+  margin-top: -4%;
+  margin-right: 2%;
+
+}
+
+#log-in p{
+  font-family: 'Open Sans';
+  font-size: 1rem;
+  color: #abaeae;
+  display: inline-block;
+}
+#log-in a, #log-in a:visited{
+  text-decoration: none;
+  font-family: 'Open Sans';
+  font-size: 1rem;
+  color: #00a0ff;
+
+}
+
+#log-in a:hover{
+  color: #abaeae;
+}
+
+.content{
+  background-color: #f7fafa;
+  padding-top: 10%;
+  padding-bottom: 7%;
+}
+
+.sign-in {
+  margin-left: 32.5%;
+  width: 35%;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #abaeae;
+  border-radius: 10px;
+  background-color: white;
+  padding-bottom: 5%;
+}
+
+.sign-in h1{
+  font-family: 'Open Sans';
+  font-weight: 400;
+  color: black;
+  padding-left: 5%;
+
+}
+
+.sign-in-field{
+  padding-left: 5%;
+  padding-bottom: 5%;
+}
+
+.sign-in-field label{
+  padding-right: 2%;
+  font-family: 'Open Sans';
+  font-weight: 400;
+  color: #abaeae;
+}
+
+.sign-in-field input{
+  border-style: none;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #abaeae;
+  border-radius: 5px;
+  height:25px;
+  width: 70%;
+}
+
+.sign-in-action input{
+  width:70%;
+  text-align: center;
+  font-family: 'Open Sans';
+  border-style: none;
+  background-color: #2bde73;
+  color: white;
+  border-radius: 5px;
+  font-size: 1rem;
+  margin-left: 17.5%;
+}
+
+#footer{
+  position: absolute;
+  background-color: #0f2105;
+  width: 100%;
+}
+
+.crowd-footer{
+  font-family: 'Dosis', sans-serif;
+  font-size: 1.4rem;
+  display: inline-block;
+  padding-left: 2%;
+  color: white;
+}
+.funder-footer{
+  font-family: 'Dosis', sans-serif;
+  font-size: 1.4rem;
+  color: #2bde73;
+  display: inline-block;
+  padding-top: 1.5%;
+}
+
+.copyright{
+  font-family: 'Open Sans';
+  font-weight: 400;
+  color:white;
+  font-size: 0.8rem;
+  padding-right: 2%;
+  padding-bottom: 2%;
+  float: right;
+}
+
+.sign-up-field{
+  padding-left: 5%;
+  padding-bottom: 5%;
+}
+
+.sign-up-field label{
+  padding-right: 2%;
+  font-family: 'Open Sans';
+  font-weight: 400;
+  color: #abaeae;
+}
+
+.sign-up-field input{
+  border-style: none;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #abaeae;
+  border-radius: 5px;
+  height:25px;
+  width: 50%;
+}
+
+.sign-up-confirm-field{
+  padding-left: 5%;
+  padding-bottom: 5%;
+}
+
+.sign-up-confirm-field label{
+  padding-right: 2%;
+  font-family: 'Open Sans';
+  font-weight: 400;
+  color: #abaeae;
+}
+
+.sign-up-confirm-field input{
+  border-style: none;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #abaeae;
+  border-radius: 5px;
+  height:25px;
+  width: 50%;
+}
+
+.checkbox{
+    padding-left: 7%;
+    padding-bottom: 10%;
+}
+
+.checkbox label{
+  font-family: 'Open Sans';
+  font-weight: 400;
+  color: #abaeae;
+}
+
+#checkbox-tag{
+  padding-left: 5%;
+  font-family: 'Open Sans';
+  font-weight: 400;
+  color: #abaeae;
+}
+.error_messages h2{
+  font-family: 'Open Sans';
+  color: #2bde73;
+  padding-left: 5%;
+}
+.error_messages ul{
+	list-style: none;
+	font-size: 1rem;
+  font-family: 'Open Sans';
+  color: #0f2105;
+
+}
+
+ .error_messages li{
+	padding-right: 2.5rem;
+	padding-top: 1.2rem;
+}
