Add method to show total of money raised on a project

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
     <li><%= "Name of project is #{project.title}" %>
     <li><%= "time remaining on this project is
     #{distance_of_time_in_words(project.end_date,project.start_or_now)}"%></li>
-    <li><%= "Your project has raised ${}" %></li>
+    <li><%= "Your project has raised $ #{project.money_raised}" %></li>
 </ul>
   <% end %>
 
