--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,6 +11,11 @@
 <%= link_to 'Edit Account', edit_user_path(@user) %>
 
 <h1>Projects you own</h1>
-<p><% @owned_projects.each do |project| %>
-  <%= "You owned #{project.title}" %>
-<% end %> </p>
+<% @owned_projects.each do |project| %>
+<p>  <%= "You own #{project.title}" %> <p>
+<% end %>
+
+<h1>You Backed</h1>
+<%  @user_backedprojects.each do |project| %>
+<p>  <%= "You have backed #{project.title}" %> </p>
+  <% end %>
