--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -14,6 +14,7 @@
 <h2><%= @project.title %></h2>
 <p> <%=  @user_project.email %></p>
 <p><%= @project.description %> </p>
+<p><%= @project.category.name %></p>
 <div id="new_goal">
 <%= render "funding_goal" %>
 </div>
