Deal with minor merge issues

--- a/app/assets/stylesheets/base/globals.scss
+++ b/app/assets/stylesheets/base/globals.scss
@@ -234,28 +234,29 @@ html{
   font-weight: 400;
   color: #abaeae;
 }
+
 .error_messages h2{
   font-family: 'Open Sans';
   color: #2bde73;
   padding-left: 5%;
 }
+
 .error_messages ul{
 	list-style: none;
 	font-size: 1rem;
   font-family: 'Open Sans';
   color: #0f2105;
-
 }
 
  .error_messages li{
 	padding-right: 2.5rem;
 	padding-top: 1.2rem;
 }
-<<<<<<< HEAD
+
 .user-profile{
   margin-left: 15%;
   width: 70%;
-=======
+}
 
 .project-show-page{
   margin-left: 32.5%;
@@ -266,8 +267,8 @@ html{
   border-radius: 10px;
   background-color: white;
   padding-bottom: 5%;
-
 }
+
 .user-profile h1{
 
 }
@@ -288,6 +289,8 @@ html{
 }
 
 .user-profile a, .user-profile a:visited{
+
+}
 #user-email{
   list-style: none;
   font-size: 1rem;
