Update nav path for Discover

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
     <nav id="main-menu">
     <ul>
-      <li><%= link_to 'Discover', projects_path %></li>
+      <li><%= link_to 'Discover', categories_path %></li>
       <li><%= link_to 'Start a Project', new_project_path %></li>
       <li><%= link_to 'Profile', user_path('current') %></li>
     </ul>
