--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
     </div>
   <div id = "footer">
     <p><div class="crowd-footer">CROWD</div><div class="funder-footer">FUNDER</div></p>
-    <p class="copyright">&copy; GitHer, 2015</p>
+    <p class="copyright">&copy; Crowdfunder, 2015</p>
   </div><!--end footer-->
   </div><!--end page-wrapper-->
 </body>
