Add more variables to styling

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -3,3 +3,5 @@
 @import "base/globals.scss";
 @import "styles/projects";
 @import "styles/users";
+@import url(https://fonts.googleapis.com/css?family=Dosis);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
