--- a/app/assets/stylesheets/base/globals.scss
+++ b/app/assets/stylesheets/base/globals.scss
@@ -1,3 +1,11 @@
+$primary-font: Dosis, sans-serif;
+$secondary-font: Open Sans;
+$funder-text-color: #2bde73;
+$main-menu-color: #abaeae;
+$log-in-color: #00a0ff;
+$background-color: #f7fafa;
+$secondary-background-color:#0f2105;
+
 html{
   box-sizing: border-box;
 	font-size: 100%;
@@ -9,16 +17,19 @@ html{
 	width: 100%;
 	margin: 0 auto;
 }
+body {
+  margin:0;
+}
 .crowd{
-  font-family: 'Dosis', sans-serif;
+  font-family: $primary-font;
   font-size: 1.7rem;
   display: inline-block;
   padding-left: 2%;
 }
 .funder{
-  font-family: 'Dosis', sans-serif;
+  font-family: $primary-font;
   font-size: 1.7rem;
-  color: #2bde73;
+  color: $funder-text-color;
   display: inline-block;
 }
 
@@ -46,14 +57,14 @@ html{
 
 #main-menu a, #main-menu a:visited{
   text-decoration: none;
-  font-family: 'Open Sans';
+  font-family: $secondary-font;
   font-size: 1rem;
-  color: #abaeae;
+  color: $main-menu-color;
 
 }
 
 #main-menu a:hover{
-  color: #2bde73;
+  color: $funder-text-color;
 }
 
 #log-in{
@@ -66,25 +77,25 @@ html{
 }
 
 #log-in p{
-  font-family: 'Open Sans';
+  font-family: $secondary-font;
   font-size: 1rem;
-  color: #abaeae;
+  color: $main-menu-color;
   display: inline-block;
 }
 #log-in a, #log-in a:visited{
   text-decoration: none;
-  font-family: 'Open Sans';
+  font-family:$secondary-font;
   font-size: 1rem;
-  color: #00a0ff;
+  color: $log-in-color;
 
 }
 
 #log-in a:hover{
-  color: #abaeae;
+  color: $main-menu-color;
 }
 
 .content{
-  background-color: #f7fafa;
+  background-color: $background-color;
   padding-top: 10%;
   padding-bottom: 7%;
 }
@@ -94,14 +105,14 @@ html{
   width: 35%;
   border-style: solid;
   border-width: 1px;
-  border-color: #abaeae;
+  border-color: $main-menu-color;
   border-radius: 10px;
   background-color: white;
   padding-bottom: 5%;
 }
 
 .sign-in h1{
-  font-family: 'Open Sans';
+  font-family: $secondary-font;
   font-weight: 400;
   color: black;
   padding-left: 5%;
@@ -115,16 +126,16 @@ html{
 
 .sign-in-field label{
   padding-right: 2%;
-  font-family: 'Open Sans';
+  font-family: $secondary-font;
   font-weight: 400;
-  color: #abaeae;
+  color: $main-menu-color;
 }
 
 .sign-in-field input{
   border-style: none;
   border-style: solid;
   border-width: 1px;
-  border-color: #abaeae;
+  border-color: $main-menu-color;
   border-radius: 5px;
   height:25px;
   width: 70%;
@@ -133,9 +144,9 @@ html{
 .sign-in-action input{
   width:70%;
   text-align: center;
-  font-family: 'Open Sans';
+  font-family: $secondary-font;
   border-style: none;
-  background-color: #2bde73;
+  background-color: $funder-text-color;
   color: white;
   border-radius: 5px;
   font-size: 1rem;
@@ -144,7 +155,7 @@ html{
 //
 #footer{
   position: absolute;
-  background-color: #0f2105;
+  background-color: $secondary-background-color;
   width: 100%;
   bottom:0;
   margin-left:0;
@@ -153,27 +164,25 @@ html{
 }
 
 
-body {
-  margin:0;
-}
+
 
 .crowd-footer{
-  font-family: 'Dosis', sans-serif;
+  font-family: $primary-font;
   font-size: 1.4rem;
   display: inline-block;
   padding-left: 2%;
   color: white;
 }
 .funder-footer{
-  font-family: 'Dosis', sans-serif;
+  font-family: $primary-font;
   font-size: 1.4rem;
-  color: #2bde73;
+  color: $funder-text-color;
   display: inline-block;
   padding-top: 1.5%;
 }
 
 .copyright{
-  font-family: 'Open Sans';
+  font-family: $secondary-font;
   font-weight: 400;
   color:white;
   font-size: 0.8rem;
@@ -189,16 +198,16 @@ body {
 
 .sign-up-field label{
   padding-right: 2%;
-  font-family: 'Open Sans';
+  font-family: $secondary-font;
   font-weight: 400;
-  color: #abaeae;
+  color: $main-menu-color;
 }
 
 .sign-up-field input{
   border-style: none;
   border-style: solid;
   border-width: 1px;
-  border-color: #abaeae;
+  border-color: $main-menu-color;
   border-radius: 5px;
   height:25px;
   width: 50%;
@@ -211,16 +220,16 @@ body {
 
 .sign-up-confirm-field label{
   padding-right: 2%;
-  font-family: 'Open Sans';
+  font-family: $secondary-font;
   font-weight: 400;
-  color: #abaeae;
+  color: $main-menu-color;
 }
 
 .sign-up-confirm-field input{
   border-style: none;
   border-style: solid;
   border-width: 1px;
-  border-color: #abaeae;
+  border-color: $main-menu-color;
   border-radius: 5px;
   height:25px;
   width: 50%;
@@ -232,29 +241,29 @@ body {
 }
 
 .checkbox label{
-  font-family: 'Open Sans';
+  font-family: $secondary-font;
   font-weight: 400;
-  color: #abaeae;
+  color: $main-menu-color;
 }
 
 #checkbox-tag{
   padding-left: 5%;
-  font-family: 'Open Sans';
+  font-family: $secondary-font;
   font-weight: 400;
-  color: #abaeae;
+  color: $main-menu-color;
 }
 
 .error_messages h2{
-  font-family: 'Open Sans';
-  color: #2bde73;
+  font-family: $secondary-font;
+  color: $funder-text-color;
   padding-left: 5%;
 }
 
 .error_messages ul{
 	list-style: none;
 	font-size: 1rem;
-  font-family: 'Open Sans';
-  color: #0f2105;
+  font-family: $secondary-font;
+  color: $secondary-background-color;
 }
 
  .error_messages li{
@@ -267,7 +276,7 @@ body {
   width: 70%;
   border-style: solid;
   border-width: 1px;
-  border-color: #abaeae;
+  border-color: $main-menu-color;
   border-radius: 10px;
   background-color: white;
   padding-bottom: 5%;
@@ -279,29 +288,29 @@ body {
   width: 35%;
   border-style: solid;
   border-width: 1px;
-  border-color: #abaeae;
+  border-color: $main-menu-color;
   border-radius: 10px;
   background-color: white;
   padding-bottom: 5%;
 }
 
 .user-profile h1{
-  font-family: 'Open Sans';
-  color: #2bde73;
+  font-family: $secondary-font;
+  color: $funder-text-color;
   text-align: center;
 }
 
 .user-profile h2{
-  font-family: 'Open Sans';
-  color: #2bde73;
+  font-family: $secondary-font;
+  color: $funder-text-color;
   text-align: center;
 }
 
 .user-profile ul{
   list-style: none;
   font-size: 1rem;
-  font-family: 'Open Sans';
-  color: #0f2105;
+  font-family: $secondary-font;
+  color: $secondary-background-color;
 }
 
 .user-profile li{
@@ -310,56 +319,56 @@ body {
 }
 
 .project-show-page h2{
-  font-family: 'Open Sans';
-  color: #2bde73;
+  font-family: $secondary-font;
+  color: $funder-text-color;
   text-align: center;
 }
 
 .user-profile p{
-  font-family: 'Open Sans';
+  font-family: $secondary-font;
   font-weight: 400;
-  color: #0f2105;
+  color: $secondary-background-color;
   text-align: center;
 
 }
 
 .user-profile a, .user-profile a:visited{
   text-decoration: none;
-  font-family: 'Open Sans';
+  font-family: $secondary-font;
   font-size: 1rem;
-  color: #00a0ff;
+  color: $log-in-color;
   margin-left: 45%;
 
 }
 #user-email{
   list-style: none;
   font-size: 1rem;
-  font-family: 'Open Sans';
-  color: #0f2105;
+  font-family: $secondary-font;
+  color: $secondary-background-color;
   text-align: center;
 }
 
 .project-show-page p{
-  font-family: 'Open Sans';
+  font-family: $secondary-font;
   font-weight: 400;
-  color: #abaeae;
+  color: $main-menu-color;
   text-align: center;
   padding-bottom: 5%;
 
 }
 
 .project-show-page h3{
-  font-family: 'Open Sans';
-  color: #2bde73;
+  font-family: $secondary-font;
+  color: $funder-text-color;
   text-align: center;
 }
 
 .project-show-page input.donate{
   width:70%;
   text-align: center;
-  font-family: 'Open Sans';
+  font-family: $secondary-font;
   border-style: none;
-  background-color: #2bde73;
+  background-color: $funder-text-color;
   color: white;
   border-radius: 5px;
   font-size: 1rem;
@@ -369,23 +378,23 @@ body {
 
 .project-show-page a, .project-show-page a:visited{
   text-decoration: none;
-  font-family: 'Open Sans';
+  font-family: $secondary-font;
   font-size: 1rem;
-  color: #00a0ff;
+  color: $log-in-color;
   margin-left: 43%;
 }
 
 .user-profile a:hover{
-  color: #abaeae;
+  color: $main-menu-color;
   padding-left: 35%;
 }
 
 .project-show-page a:hover{
-  color: #abaeae;
+  color: $main-menu-color;
 }
 
 .sign-in h2{
-  font-family: 'Open Sans';
+  font-family: $secondary-font;
   font-weight: 400;
   color: black;
   padding-left: 5%;
@@ -394,21 +403,21 @@ body {
 
 .sign-in a, .sign-in a:visited{
   text-decoration: none;
-  font-family: 'Open Sans';
+  font-family: $secondary-font;
   font-size: 1rem;
-  color: #00a0ff;
+  color: $log-in-color;
   padding-left: 5%;
 }
 
 .sign-in a:hover{
-  color: #abaeae;
+  color: $main-menu-color;
 }
 
 .sign-in textarea{
   border-style: none;
   border-style: solid;
   border-width: 1px;
-  border-color: #abaeae;
+  border-color: $main-menu-color;
   border-radius: 5px;
   width: 70%;
 
@@ -417,9 +426,9 @@ body {
 .field input{
   width:70%;
   text-align: center;
-  font-family: 'Open Sans';
+  font-family: $secondary-font;
   border-style: none;
-  background-color: #2bde73;
+  background-color: $funder-text-color;
   color: white;
   border-radius: 5px;
   font-size: 1rem;
@@ -429,24 +438,24 @@ body {
 }
 
 .nested-fields h3{
-  font-family: 'Open Sans';
+  font-family: $secondary-font;
   font-weight: 400;
-  color: #00a0ff;
+  color: $log-in-color;
   padding-left: 5%;
 }
 
 .nested-fields label{
   padding-right: 2%;
-  font-family: 'Open Sans';
+  font-family: $secondary-font;
   font-weight: 400;
-  color: #abaeae;
+  color: $main-menu-color;
 }
 
 .nested-fields input{
   border-style: none;
   border-style: solid;
   border-width: 1px;
-  border-color: #abaeae;
+  border-color: $main-menu-color;
   border-radius: 5px;
   height:25px;
   width: 70%;
